# multi-prediction-markets-ui

./: .gitignore  README.md  pyproject.toml  requirements.in
src/prediction_markets_ui/: __init__.py  app.py  main.py  main_window.py
src/prediction_markets_ui/core/: __init__.py
src/prediction_markets_ui/dialogs/: __init__.py
src/prediction_markets_ui/theme/: __init__.py  colors.py  palette.py  styles.py
src/prediction_markets_ui/widgets/: __init__.py  bottom_tabs.py  log_panel.py  market_browser.py  trading_panel.py
