[project]
name = "prediction-markets-ui"
version = "0.1.0"
description = "Trading UI for prediction markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "prediction-markets",
    # UI framework to be determined
    # "textual>=0.47.0",  # For TUI
    # "nicegui>=1.4.0",   # For Web UI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prediction_markets_ui"]
