[project]
name = "prediction-markets-ui"
version = "0.1.0"
description = "Trading UI for prediction markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "prediction-markets",
    "PySide6>=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 로컬 개발용: core를 ../core에서 가져옴
[tool.uv.sources]
prediction-markets = { path = "../core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/prediction_markets_ui"]
